tests/ui/traits/next-solver/lazy-nested-obligations-2.next.stderr
error[E0271]: type mismatch resolving `fn(&str) == fn(&str) {f}`
  --> $DIR/lazy-nested-obligations-2.rs:20:21
   |
LL |     let _: V<i32> = V(f);
   |                     ^^^^ types differ

error[E0271]: type mismatch resolving `fn(&str) == fn(&str) {f}`
  --> $DIR/lazy-nested-obligations-2.rs:27:22
   |
LL |     let _: E3<i32> = E3::Var(f);
   |                      ^^^^^^^^^^ types differ

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
